--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   color: #000;
   background-color: #fff;
 
